[package]
name = "_9two5"
version = "0.1.2"
edition = "2021"

[dependencies]
eframe = "0.22"        # egui desktop framework
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"    # find user config dir

[package.metadata.bundle]
name = "_9two5"
identifier = "com.you._9two5"
#icon = "assets/icon.icns"   # optional
